--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -67,7 +67,8 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Utils, Version=1.1.6.27644, Culture=neutral, processorArchitecture=x86">
@@ -437,7 +438,6 @@
     <None Include="Resources\Images\busy.gif" />
     <None Include="Resources\Images\big_spinner.gif" />
     <None Include="Resources\Images\find.png" />
-    <Content Include="icon.ico" />
     <Content Include="Resources\Images\folder_explore.png" />
     <None Include="Resources\Images\importaccept.png" />
     <None Include="Resources\Images\importpending.png" />
@@ -447,6 +447,7 @@
     <EmbeddedResource Include="Resources\Images\icon_faded.png" />
     <None Include="Resources\Images\tick.png" />
     <None Include="Resources\Images\trakt.png" />
+    <Content Include="Resources\Images\icon.ico" />
     <Content Include="Resources\Languages\cs.xml" />
     <Content Include="Resources\Languages\da.xml" />
     <Content Include="Resources\Languages\de.xml" />
