--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -452,20 +452,21 @@
     <Content Include="Resources\Languages\da.xml" />
     <Content Include="Resources\Languages\de.xml" />
     <Content Include="Resources\Languages\el.xml" />
-    <Content Include="Resources\Languages\en%28us%29.xml" />
+    <Content Include="Resources\Languages\en-US.xml" />
     <Content Include="Resources\Languages\es.xml" />
+    <Content Include="Resources\Languages\fi.xml" />
     <Content Include="Resources\Languages\fr.xml" />
     <Content Include="Resources\Languages\he.xml" />
     <Content Include="Resources\Languages\it.xml" />
     <Content Include="Resources\Languages\ko.xml" />
     <Content Include="Resources\Languages\nl.xml" />
-    <Content Include="Resources\Languages\no%28nb%29.xml" />
+    <Content Include="Resources\Languages\no-NB.xml" />
     <Content Include="Resources\Languages\no.xml" />
     <Content Include="Resources\Languages\pl.xml" />
     <Content Include="Resources\Languages\pt-BR.xml" />
-    <Content Include="Resources\Languages\pt_pt.xml" />
+    <Content Include="Resources\Languages\pt.xml" />
     <Content Include="Resources\Languages\ru.xml" />
-    <Content Include="Resources\Languages\ru_utf8.xml" />
+    <Content Include="Resources\Languages\ru_iso1251.xml" />
     <Content Include="Resources\Languages\sv.xml" />
     <None Include="Resources\Images\tv_series_logo_noreflection.png" />
     <Compile Include="Configuration\ImportPanelEpID.cs">
